Wed Oct 22 08:52:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/*:
          Added examples of OCI TAO Developers Guide

Tue Sep 16 12:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Added missing include, thanks to Mark Hebbel
          <Mark dot Hebbel at baslerweb dot com> for reporting this

Tue Sep 16 12:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/Execution_Manager.cpp
        * DAnCE/NodeManager/Node_Manager.cpp
        * DAnCE/RepositoryManager/RepositoryManager.cpp
        * DAnCE/TargetManager/CmpClient.cpp
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client.cpp
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_dynamic.cpp
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_ex.cpp
        * DAnCE/tests/NodeApplicationTest/NodeApp_test_client_simple.cpp
        * docs/tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributorDriver.cpp
        * examples/BasicSP/EC/controller.cpp
        * examples/Display/RateGen/controller.cpp
        * examples/Hello/Sender/starter.cpp
        * examples/Swapping/Sender/starter.cpp
        * performance-tests/Benchmark/RoundTrip/client.cpp
        * performance-tests/Protocols/Controller/Controller.cpp
        * tests/Bug_2130_Regression/SEC_CheckPoint/controller.cpp
        * tools/Config_Handlers/CIAO_Events/test.cpp
        * tools/Config_Handlers/Package_Handlers/test.cpp
        * tools/Config_Handlers/RT-CCM/test.cpp
        * tools/Config_Handlers/test.cpp
          ACE_TCHAR changes

Mon Sep 15 16:34:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * NEWS:
          Updated for x.6.6

Mon Sep 15 11:08:04 UTC 2008  Simon Massey  <sma@prismtech.com>

        * CIAO version 0.6.6 released.

Tue Aug  5 15:13:53 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
