@@ -16,8 +16,7 @@ ACE_TMAIN (int argc, ACE_TCHAR *argv[])
   //
   CORBA::ORB_var orb =
     CORBA::ORB_init (argc,
-                     argv,
-                     "");
+                     argv);
   try
     {
       // Get reference to Root POA.
